--- a/static-html/blog-landing.html
+++ b/static-html/blog-landing.html
@@ -210,7 +210,7 @@
                 <section class="siteBody">
 
                     <div class="row">
-                        <section class="column siteContent">
+                        <section class="large-10 large-centered column siteContent">
                             <section class="row column">
 
                                 <article class="postPage">
@@ -220,7 +220,7 @@
                                     <!--    Post Content    -->
                                     <div class="postPage-content">
 
-                                        <!-- TODO: Centering of this blokc should be done from WYSIWYG editor, in case it will be custom field/ just add class ".u-text--center" -->
+                                        <!-- TODO: Centering of this block should be done from WYSIWYG editor, in case it will be custom field/ just add class ".u-text--center" -->
                                         <div class="intro" style="text-align: center;">
                                             <p>
                                                 Our journal highlights the best in Pinellas County's visual and performing arts. Our multimedia coverage of this dynamic cultural scene includes timely features, event previews, and perspectives from casual to critical, focused on the arts in all genres.
@@ -235,9 +235,102 @@
                             </section>
 
 
+                            <section class="row medium-collapse">
+                                <div class="medium-10 large-12 column medium-centered">
+
+                                    <div class="row small-collapse">
+                                        <div class="medium-8 large-6 column">
+
+                                            <div class="gridItem gridItem--blog">
+                                                <a href="#" class="js-touchFocus">
+                                                    <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/1480x1480 768w, http://placehold.it/800x800 1024w">
+                                                    <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                                                    <div class="gridItem-info">
+                                                        <h3>Brazilian Jazz Concert Pairs International Master With (...) </h3>
+                                                        <p><strong>Read Post</strong></p>
+                                                    </div>
+                                                </a>
+                                            </div>
+
+
+                                        </div>
+                                        <div class="medium-4 large-3 column">
+                                            <div class="row small-collapse">
+                                                <div class="small-12 halfMedium-6 medium-12 column">
+
+                                                    <div class="gridItem gridItem--blog">
+                                                        <a href="#" class="js-touchFocus">
+                                                            <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/1480x1480 768w, http://placehold.it/800x800 1024w">
+                                                            <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                                                            <div class="gridItem-info">
+                                                                <h3>Brazilian Jazz Concert Pairs International Master With (...) </h3>
+                                                                <p><strong>Read Post</strong></p>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="small-12 halfMedium-6 medium-12 column">
+
+                                                    <div class="gridItem gridItem--blog">
+                                                        <a href="#" class="js-touchFocus">
+                                                            <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/1480x1480 768w, http://placehold.it/800x800 1024w">
+                                                            <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                                                            <div class="gridItem-info">
+                                                                <h3>Brazilian Jazz Concert Pairs International Master With (...) </h3>
+                                                                <p><strong>Read Post</strong></p>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="medium-12 large-3 column">
+                                            <div class="row small-collapse">
+                                                <div class="small-12 halfMedium-6 large-12 column">
+
+                                                    <div class="gridItem gridItem--blog">
+                                                        <a href="#" class="js-touchFocus">
+                                                            <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/1480x1480 768w, http://placehold.it/800x800 1024w">
+                                                            <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                                                            <div class="gridItem-info">
+                                                                <h3>Brazilian Jazz Concert Pairs International Master With (...) </h3>
+                                                                <p><strong>Read Post</strong></p>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+
+
+                                                </div>
+                                                <div class="small-12 halfMedium-6 large-12 column">
+
+                                                    <div class="gridItem gridItem--blog">
+                                                        <a href="#" class="js-touchFocus">
+                                                            <img src="http://placehold.it/1480x1480" alt="" srcset="http://placehold.it/1480x1480 768w, http://placehold.it/800x800 1024w">
+                                                            <span class="gridItem-categoryDecor" style="background-color: #f7941d"></span>
+                                                            <div class="gridItem-info">
+                                                                <h3>Brazilian Jazz Concert Pairs International Master With (...) </h3>
+                                                                <p><strong>Read Post</strong></p>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                            </section>
+
                             <!--    Related Posts   -->
                             <section class="row medium-collapse">
-                                <div class="medium-8 column medium-centered">
+                                <div class="medium-8 large-10 column medium-centered">
                                     <h2 class="u-text--center">RECENT POSTS</h2>
 
                                     <div class="postsList">
@@ -253,7 +346,7 @@
                                                 <p><i>BY AUTHOR NAME | <a href="#">CATEGORY</a></i></p>
                                             </div>
                                             <div>
-                                                <a href="#" class="btn btn--fullWidth">Read More</a>
+                                                <a href="#" class="btn btn--fullWidth">Read Article</a>
                                             </div>
                                         </div>
                                         <!--   / postsList-item  -->
@@ -270,7 +363,7 @@
                                                 <div class="postsList-item-info">BY AUTHOR NAME | <a href="#">CATEGORY</a></div>
                                             </div>
                                             <div>
-                                                <a href="#" class="btn btn--fullWidth">Read More</a>
+                                                <a href="#" class="btn btn--fullWidth">Read Article</a>
                                             </div>
                                         </div>
                                         <!--   / postsList-item  -->
