--- a/static-html/blog-post.html
+++ b/static-html/blog-post.html
@@ -283,7 +283,7 @@
                                             <p><i>BY AUTHOR NAME | <a href="#">CATEGORY</a></i></p>
                                         </div>
                                         <div>
-                                            <a href="#" class="btn btn--fullWidth">Read More</a>
+                                            <a href="#" class="btn btn--fullWidth">Read Article</a>
                                         </div>
                                     </div>
                                     <!--   / postsList-item  -->
@@ -300,7 +300,7 @@
                                             <div class="postsList-item-info">BY AUTHOR NAME | <a href="#">CATEGORY</a></div>
                                         </div>
                                         <div>
-                                            <a href="#" class="btn btn--fullWidth">Read More</a>
+                                            <a href="#" class="btn btn--fullWidth">Read Article</a>
                                         </div>
                                     </div>
                                     <!--   / postsList-item  -->
