--- a/static-html/dev-html/blocks/posts-list.html
+++ b/static-html/dev-html/blocks/posts-list.html
@@ -11,7 +11,7 @@
             <p><i>BY AUTHOR NAME | <a href="#">CATEGORY</a></i></p>
         </div>
         <div>
-            <a href="#" class="btn btn--fullWidth">Read More</a>
+            <a href="#" class="btn btn--fullWidth">Read Article</a>
         </div>
     </div>  <!--   / postsList-item  -->
 
@@ -27,7 +27,7 @@
             <div class="postsList-item-info">BY AUTHOR NAME | <a href="#">CATEGORY</a></div>
         </div>
         <div>
-            <a href="#" class="btn btn--fullWidth">Read More</a>
+            <a href="#" class="btn btn--fullWidth">Read Article</a>
         </div>
     </div>  <!--   / postsList-item  -->
 </div>
